--- a/book.html
+++ b/book.html
@@ -434,7 +434,7 @@
 
                     <div class="thankyouPageText">
 
-                        <div class="thankYouPageContentRow2">
+                        <div class="thankYouPageContentRow2 thankYouTitle">
                             <h1>Tack för din bokning, Kundens namn</h1>
                         </div>
 
@@ -486,9 +486,8 @@
 
                             <div class="thankYouPageContentLeft">
 
-                                <h1>Faktureringsadressen</h1>
-
                                 <div class="thankYouPageContentRow2">
+                                    <h1>Faktureringsadressen</h1>
                                 </div>
 
                                 <div class="thankYouPageContentRow2">
@@ -530,7 +529,7 @@
 
                                 <div class="returnButton">
                                     <ul>
-                                        <li><a href="index.html">Startsidan</a></li>
+                                        <li><a href="index.html">Startsida</a></li>
                                     </ul>
                                 </div>
                             </div>
