--- a/book.html
+++ b/book.html
@@ -403,8 +403,8 @@
                             </div>
 
                             <div class="bookingInformationRow">
-                                <div>Totalt</div>
-                                <div>kr</div>
+                                <span>Total: </span>
+                                <span class="price" id="dynamicPrice2">00.0 kr</span>
                             </div>
 
                             <div class="confirmBackButtons">
@@ -516,7 +516,7 @@
                                 </div>
 
                                 <div class="thankYouPageContentRow2 totalPrices">
-                                    <span>Moms </span>
+                                    <span>Moms (25%) </span>
                                     <span class="price" id="dynamicPrice">00.0 kr</span>
                                 </div>
 
@@ -528,9 +528,11 @@
                                 </div>
 
                                 <div class="returnButton">
-                                    <ul>
-                                        <li><a href="index.html">Startsida</a></li>
-                                    </ul>
+                                    <button>
+                                        <ul>
+                                            <li><a href="index.html">Startsida</a></li>
+                                        </ul>
+                                    </button>
                                 </div>
                             </div>
 
