--- a/book.html
+++ b/book.html
@@ -18,6 +18,8 @@
 
     <link rel="stylesheet" href="CSS/book.css">
     <link rel="stylesheet" href="CSS/mediaQueries.css">
+    <link rel="stylesheet" href="CSS/bookMediaQuerie.css">
+
 
     <script defer src="JS/index.js"></script>
     <script defer src="JS/book.js"></script>
@@ -43,9 +45,9 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&display=swap" rel="stylesheet"> -->
 
-
     <!-- Font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 
 <body>
@@ -80,7 +82,7 @@
                     <p class="paymentInfoText">Fyll i formuläret för att avsluta din bokning</p>
                 </section>
 
-                <hr class="bookHR">
+                <hr class="bookHR firstHR">
 
                 <section class="serviceLocations">
                     <div class="regions">
@@ -244,6 +246,7 @@
                                             autocomplete="off">
                                     </div>
                                 </div>
+
                             </form>
 
                             <div class="checkoutFormTitle">
@@ -426,6 +429,7 @@
                             </div>
 
                         </div>
+
                     </div>
 
                 </section>
@@ -508,6 +512,8 @@
 
                             </div>
 
+                            <hr class="bookHR smallScreenHR">
+
                             <div class="thankYouPageContentRight">
 
                                 <div class="thankYouPageContentRow2 totalPrices">
@@ -538,15 +544,7 @@
 
                         </div>
 
-
-
-                        <div class="thankYouPageContent">
-                            <div class="thankYouPageContentLeft"></div>
-                            <div class="thankYouPageContentRight"></div>
-                        </div>
-
                     </div>
-
 
                 </section>
 
