--- a/book.html
+++ b/book.html
@@ -533,12 +533,8 @@
                                     <span class="price" id="dynamicPrice">00.0 kr</span>
                                 </div>
 
-                                <div class="returnButton">
-                                    <button>
-                                        <ul>
-                                            <li><a href="index.html">Startsida</a></li>
-                                        </ul>
-                                    </button>
+                                <div class="returnBtn">
+                                    <button onclick="location.href='index.html'">Startsida</button>
                                 </div>
                             </div>
 
