--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
                     <div class="servicesButtons">
                         <ul>
-                            <li><a class="bookServicesButton" href="#">Boka</a></li>
+                            <li><a class="bookServicesButton" href="book.html?book=Privatleasing">Boka</a></li>
                             <li><a class="readMoreServicesButton" href="service.html?service=Privatleasing">Läs mer</a>
                             </li>
                         </ul>
@@ -238,7 +238,7 @@
 
                     <div class="servicesButtons">
                         <ul>
-                            <li><a class="bookServicesButton" href="#">Boka</a></li>
+                            <li><a class="bookServicesButton" href="book.html?book=Abonnemang">Boka</a></li>
                             <li><a class="readMoreServicesButton" href="service.html?service=Abonnemang">Läs mer</a>
                             </li>
                         </ul>
