--- a/book.html
+++ b/book.html
@@ -162,7 +162,7 @@
                         </div>
 
                         <div class="bookingInformationRow">
-                            <p class="serviceName" id="bookName">Tjänstens namn</p>
+                            <p class="serviceName" id="bookName2">Tjänstens namn</p>
                         </div>
 
                         <div class="bookingInformationRow">
@@ -375,7 +375,7 @@
                             </div>
 
                             <div class="bookingInformationRow">
-                                <p class="serviceName" id="bookName">Tjänstens namn</p>
+                                <p class="serviceName" id="bookName3">Tjänstens namn</p>
                             </div>
 
                             <div class="bookingInformationRow">
@@ -463,7 +463,7 @@
                             <div class="thankYouPageContentRight">
 
                                 <div class="thankYouPageContentRow2">
-                                    <h1 class="serviceName4" id="bookName">Tjänstens namn</h1>
+                                    <h1 class="serviceName4" id="bookName4">Tjänstens namn</h1>
                                 </div>
 
                                 <div class="thankYouPageContentRow2">
