--- a/book.html
+++ b/book.html
@@ -463,11 +463,11 @@
                             <div class="thankYouPageContentRight">
 
                                 <div class="thankYouPageContentRow2">
-                                    <h1 class="serviceName4" id="bookName4">Tjänstens namn</h1>
+                                    <p class="serviceName" id="bookName4">Tjänstens namn</p>
                                 </div>
 
                                 <div class="thankYouPageContentRow2">
-                                    <span class="price" id="dynamicPrice3">0 kr</span>
+                                    <span class="price" id="dynamicPrice3">00.0 kr</span>
                                 </div>
 
                                 <div class="thankYouPageContentRow2">
