--- a/index.html
+++ b/index.html
@@ -220,8 +220,10 @@
 
                     <div class="servicesButtons">
                         <ul>
-                            <li><a class="bookServicesButton" href="book.html?book=Privatleasing">Boka</a></li>
-                            <li><a class="readMoreServicesButton" href="service.html?service=Privatleasing">Läs mer</a>
+                            <li><a class="bookServicesButton" href="error.html">Boka</a></li>
+                            <li><a class="readMoreServicesButton" href="error.html">Läs mer</a>
+                            <!--<li><a class="bookServicesButton" href="book.html?book=Privatleasing">Boka</a></li>
+                            <li><a class="readMoreServicesButton" href="service.html?service=Privatleasing">Läs mer</a>-->
                             </li>
                         </ul>
                     </div>
@@ -288,8 +290,9 @@
 
                     <div class="servicesButtons">
                         <ul>
-                            <li><a class="bookServicesButton" href="#">Boka</a></li>
-                            <li><a class="readMoreServicesButton" href="service.html?service=Timbokning">Läs mer</a>
+                            <li><a class="bookServicesButton" href="error.html">Boka</a></li>
+                            <li><a class="readMoreServicesButton" href="error.html">Läs mer</a>
+                            <!--<li><a class="readMoreServicesButton" href="service.html?service=Timbokning">Läs mer</a>-->
                             </li>
                         </ul>
                     </div>
@@ -324,9 +327,11 @@
 
                     <div class="servicesButtons">
                         <ul>
-                            <li><a class="bookServicesButton" href="#">Boka</a></li>
+                            <li><a class="bookServicesButton" href="error.html">Boka</a></li>
                             <li><a class="readMoreServicesButton"
-                                    href="service.html?service=Stad till Stad-transfer">Läs mer</a></li>
+                                    href="error.html">Läs mer</a></li>
+                            <!--<li><a class="readMoreServicesButton"
+                                    href="service.html?service=Stad till Stad-transfer">Läs mer</a></li>-->
                         </ul>
                     </div>
                 </div>
