--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                     <img src="IMAGES/3VolvosInRow.jpg" alt="3 Volvos In Row">
                     <div class="servicesContainer">
                         <h2>Privatleasing</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum exercitationem rerum soluta eius
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cm exercitationem rerum soluta eius
                             odit facere?</p>
                     </div>
 
@@ -268,7 +268,7 @@
                     <img src="IMAGES/WeddingRings.jpg" alt="Wedding Rings">
                     <div class="servicesContainer">
                         <h2>Evenemangstransfer</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi laborum cum, nihil officia in
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi laborum ces, nihil officia in
                             expedita.</p>
                     </div>
 
