--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                         <ul>
                             <li><a class="bookServicesButton" href="error.html">Boka</a></li>
                             <li><a class="readMoreServicesButton" href="error.html">Läs mer</a>
-                            <!--<li><a class="bookServicesButton" href="book.html?book=Privatleasing">Boka</a></li>
+                                <!--<li><a class="bookServicesButton" href="book.html?book=Privatleasing">Boka</a></li>
                             <li><a class="readMoreServicesButton" href="service.html?service=Privatleasing">Läs mer</a>-->
                             </li>
                         </ul>
@@ -292,7 +292,7 @@
                         <ul>
                             <li><a class="bookServicesButton" href="error.html">Boka</a></li>
                             <li><a class="readMoreServicesButton" href="error.html">Läs mer</a>
-                            <!--<li><a class="readMoreServicesButton" href="service.html?service=Timbokning">Läs mer</a>-->
+                                <!--<li><a class="readMoreServicesButton" href="service.html?service=Timbokning">Läs mer</a>-->
                             </li>
                         </ul>
                     </div>
@@ -328,8 +328,7 @@
                     <div class="servicesButtons">
                         <ul>
                             <li><a class="bookServicesButton" href="error.html">Boka</a></li>
-                            <li><a class="readMoreServicesButton"
-                                    href="error.html">Läs mer</a></li>
+                            <li><a class="readMoreServicesButton" href="error.html">Läs mer</a></li>
                             <!--<li><a class="readMoreServicesButton"
                                     href="service.html?service=Stad till Stad-transfer">Läs mer</a></li>-->
                         </ul>
@@ -825,7 +824,8 @@
 
                     <div class="profile">
                         <figure>
-                            <img src="IMAGES/ManProfile.jpg" alt="Man profile">
+                            <img src="IMAGES/ManProfileFace.jpg" alt="Man Profile">
+                            <!--  <img src="IMAGES/ManProfile.jpg" alt="Man profile">-->
                             <figcaption class="figcaptionOne">Marcel Fontaine</figcaption>
                             <figcaption class="figcaptionTwo">Verkställande Direktör</figcaption>
                             <figcaption class="figcaptionThree">marcel.fontaine@limovia.se</figcaption>
@@ -834,7 +834,8 @@
 
                     <div class="profile">
                         <figure>
-                            <img src="IMAGES/WomenProfile.png" alt="Woman Profile">
+                            <img src="IMAGES/WomenProfileFace.png" alt="Woman Profile">
+                            <!-- <img src="IMAGES/WomenProfile.png" alt="Woman Profile">-->
                             <figcaption class="figcaptionOne">Mia Tussaud</figcaption>
                             <figcaption class="figcaptionTwo">Försäljningsansvarig</figcaption>
                             <figcaption class="figcaptionThree">mia.tussaud@limovia.se</figcaption>
@@ -843,7 +844,8 @@
 
                     <div class="profile">
                         <figure>
-                            <img src="IMAGES/WomenProfile.png" alt="Woman Profile">
+                            <img src="IMAGES/WomenProfileFace.png" alt="Woman Profile">
+                            <!-- <img src="IMAGES/WomenProfile.png" alt="Woman Profile">-->
                             <figcaption class="figcaptionOne">Céline Chapelle</figcaption>
                             <figcaption class="figcaptionTwo">Verksamhetschef - Region Stockholm / Västerås</figcaption>
                             <figcaption class="figcaptionThree">celine.chapelle@limovia.se</figcaption>
@@ -852,7 +854,8 @@
 
                     <div class="profile">
                         <figure>
-                            <img src="IMAGES/ManProfile.jpg" alt="Man Profile">
+                            <img src="IMAGES/ManProfileFace.jpg" alt="Man Profile">
+                            <!-- <img src="IMAGES/ManProfile.jpg" alt="Man Profile">-->
                             <figcaption class="figcaptionOne">Raphaël Dumas</figcaption>
                             <figcaption class="figcaptionTwo">Verksamhetschef - Region Väst / Sydost</figcaption>
                             <figcaption class="figcaptionThree">raphael.dumas@limovia.se</figcaption>
