--- a/index.html
+++ b/index.html
@@ -240,9 +240,12 @@
 
                     <div class="servicesButtons">
                         <ul>
-                            <li><a class="bookServicesButton" href="book.html?book=Abonnemang">Boka</a></li>
-                            <li><a class="readMoreServicesButton" href="service.html?service=Abonnemang">Läs mer</a>
+                            <li><a class="bookServicesButton" href="error.html">Boka</a></li>
+                            <li><a class="readMoreServicesButton" href="error.html">Läs mer</a>
                             </li>
+                            <!--<li><a class="bookServicesButton" href="book.html?book=Abonnemang">Boka</a></li>
+                            <li><a class="readMoreServicesButton" href="service.html?service=Abonnemang">Läs mer</a>
+                            </li>-->
                         </ul>
                     </div>
                 </div>
@@ -257,7 +260,7 @@
 
                     <div class="servicesButtons">
                         <ul>
-                            <li><a class="bookServicesButton" href="#">Boka</a></li>
+                            <li><a class="bookServicesButton" href="book.html?book=Flygplatstransfer">Boka</a></li>
                             <li><a class="readMoreServicesButton" href="service.html?service=Flygplatstransfer">Läs
                                     mer</a></li>
                         </ul>
@@ -274,7 +277,7 @@
 
                     <div class="servicesButtons">
                         <ul>
-                            <li><a class="bookServicesButton" href="#">Boka</a></li>
+                            <li><a class="bookServicesButton" href="book.html?book=Evenemangstransfer">Boka</a></li>
                             <li><a class="readMoreServicesButton" href="service.html?service=Evenemangstransfer">Läs
                                     mer</a></li>
                         </ul>
@@ -290,9 +293,8 @@
 
                     <div class="servicesButtons">
                         <ul>
-                            <li><a class="bookServicesButton" href="error.html">Boka</a></li>
-                            <li><a class="readMoreServicesButton" href="error.html">Läs mer</a>
-                                <!--<li><a class="readMoreServicesButton" href="service.html?service=Timbokning">Läs mer</a>-->
+                            <li><a class="bookServicesButton" href="book.html?book=Timbokning">Boka</a></li>
+                            <li><a class="readMoreServicesButton" href="service.html?service=Timbokning">Läs mer</a>
                             </li>
                         </ul>
                     </div>
@@ -309,7 +311,7 @@
 
                     <div class="servicesButtons">
                         <ul>
-                            <li><a class="bookServicesButton" href="#">Boka</a></li>
+                            <li><a class="bookServicesButton" href="book.html?book=Lokal Transfer">Boka</a></li>
                             <li><a class="readMoreServicesButton" href="service.html?service=Lokal Transfer">Läs mer</a>
                             </li>
                         </ul>
