--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                     <div class="servicesButtons">
                         <ul>
                             <li><a class="bookServicesButton" href="error.html">Boka</a></li>
-                            <li><a class="readMoreServicesButton" href="error.html">Läs mer</a>
+                            <li><a class="readMoreServicesButton" href="service.html?service=Privatleasing">Läs mer</a>
                                 <!--<li><a class="bookServicesButton" href="book.html?book=Privatleasing">Boka</a></li>
                             <li><a class="readMoreServicesButton" href="service.html?service=Privatleasing">Läs mer</a>-->
                             </li>
@@ -241,7 +241,7 @@
                     <div class="servicesButtons">
                         <ul>
                             <li><a class="bookServicesButton" href="error.html">Boka</a></li>
-                            <li><a class="readMoreServicesButton" href="error.html">Läs mer</a>
+                            <li><a class="readMoreServicesButton" href="service.html?service=Abonnemang">Läs mer</a>
                             </li>
                             <!--<li><a class="bookServicesButton" href="book.html?book=Abonnemang">Boka</a></li>
                             <li><a class="readMoreServicesButton" href="service.html?service=Abonnemang">Läs mer</a>
@@ -330,7 +330,8 @@
                     <div class="servicesButtons">
                         <ul>
                             <li><a class="bookServicesButton" href="error.html">Boka</a></li>
-                            <li><a class="readMoreServicesButton" href="error.html">Läs mer</a></li>
+                            <li><a class="readMoreServicesButton"
+                                    href="service.html?service=Stad till Stad-transfer">Läs mer</a></li>
                             <!--<li><a class="readMoreServicesButton"
                                     href="service.html?service=Stad till Stad-transfer">Läs mer</a></li>-->
                         </ul>
