--- a/service.html
+++ b/service.html
@@ -69,6 +69,8 @@
             </div>
         </div>
 
+        <div class="serviceHeroImage2"></div>
+
         <section class="serviceInfo">
             <div class="serviceInfoContainer middleContainer"></div>
             <div class="serviceInfoContainer">
