--- a/book.html
+++ b/book.html
@@ -69,6 +69,7 @@
     <main>
 
         <div class="bookHeroImage"></div>
+        <div class="bookHeroImage2"></div>
 
         <div class="headMainContainer">
 
