--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
                     <div class="servicesButtons">
                         <ul>
-                            <li><a class="bookServicesButton" href="error.html">Boka</a></li>
+                            <li><a class="bookServicesButton" href="book.html?book=Privatleasing">Boka</a></li>
                             <li><a class="readMoreServicesButton" href="service.html?service=Privatleasing">Läs mer</a>
                                 <!--<li><a class="bookServicesButton" href="book.html?book=Privatleasing">Boka</a></li>
                             <li><a class="readMoreServicesButton" href="service.html?service=Privatleasing">Läs mer</a>-->
@@ -329,7 +329,7 @@
 
                     <div class="servicesButtons">
                         <ul>
-                            <li><a class="bookServicesButton" href="error.html">Boka</a></li>
+                            <li><a class="bookServicesButton" href="book.html?book=Stad till Stad-transfer">Boka</a></li>
                             <li><a class="readMoreServicesButton"
                                     href="service.html?service=Stad till Stad-transfer">Läs mer</a></li>
                             <!--<li><a class="readMoreServicesButton"
