--- a/index.html
+++ b/index.html
@@ -288,7 +288,8 @@
                     <img src="IMAGES/CarWindowView.png" alt="Car Window View">
                     <div class="servicesContainer">
                         <h2>Timbokning</h2>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi esse vel fugit nihil.</p>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi esse vel fugit nihil. fugiat
+                            modi! Ea incidunt aperiam in.</p>
                     </div>
 
                     <div class="servicesButtons">
@@ -329,7 +330,8 @@
 
                     <div class="servicesButtons">
                         <ul>
-                            <li><a class="bookServicesButton" href="book.html?book=Stad till Stad-transfer">Boka</a></li>
+                            <li><a class="bookServicesButton" href="book.html?book=Stad till Stad-transfer">Boka</a>
+                            </li>
                             <li><a class="readMoreServicesButton"
                                     href="service.html?service=Stad till Stad-transfer">Läs mer</a></li>
                             <!--<li><a class="readMoreServicesButton"
